--- a/PointOfSale/Resources/Styles/Styles.xaml
+++ b/PointOfSale/Resources/Styles/Styles.xaml
@@ -1,10 +1,20 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <?xaml-comp compile="true" ?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                     xmlns:syncfusion="clr-namespace:Syncfusion.Maui.DataGrid;assembly=Syncfusion.Maui.DataGrid">
 
-    
 
+    <Style TargetType="syncfusion:DataGridCell">
+        <Setter Property="TextColor" Value="#fff"/>
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="FontFamily" Value="OpenSansRegular"/>
+    </Style>
+    <Style TargetType="syncfusion:DataGridHeaderCell">
+        <Setter Property="TextColor" Value="#fff"/>
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="FontFamily" Value="OpenSansRegular"/>
+    </Style>
 
     <!-- Shell -->
     <Style x:Key="BaseStyle"
