--- a/PointOfSale/Pages/ConsultationPage.xaml
+++ b/PointOfSale/Pages/ConsultationPage.xaml
@@ -162,15 +162,16 @@
                             </VerticalStackLayout>
 
                             <HorizontalStackLayout Grid.Row="1">
-                                <Grid ColumnDefinitions="*,*,*" ColumnSpacing="5" Margin="5">
+                                <Grid ColumnDefinitions="*,*" ColumnSpacing="5" Margin="5">
                                     <Button Text="Save" VerticalOptions="Center"
                                 Clicked="SaveCustomer_Button_Clicked"/>
-                                    <Button Grid.Column="1" Text="Close" VerticalOptions="Center"
+                                <Button Grid.Column="1" Text="Close" VerticalOptions="Center"
                                 Clicked="Button_Clicked"/>
-                                </Grid>
+                            </Grid>
                             </HorizontalStackLayout>
 
                         </Grid>
+                    <Label x:Name="Result" HorizontalOptions="Center"/>
                     </VerticalStackLayout>
             </Border>
         </Grid>
