--- a/PointOfSale/Pages/CustomerPage.xaml
+++ b/PointOfSale/Pages/CustomerPage.xaml
@@ -7,207 +7,102 @@
              Title="CustomerPage"
              xmlns:m="clr-namespace:PointOfSale.Models"
              >
-
-    <ContentPage.Resources>
-        <Style TargetType="syncfusion:DataGridCell">
-            <Setter Property="TextColor" Value="#fff"/>
-            <Setter Property="FontSize" Value="18"/>
-            <Setter Property="FontFamily" Value="OpenSansRegular"/>
+    <!--<ContentPage.Resources>
+        <local: x:Key="converter"/>
+        <Style TargetType="syncfusion:DataGridRow">
+            <Setter Property="Background" Value="{Binding Source={RelativeSource Mode=Self}, Converter={StaticResource Key=converter}}"/>
         </Style>
-        <Style TargetType="syncfusion:DataGridHeaderCell">
-            <Setter Property="TextColor" Value="#fff"/>
-            <Setter Property="FontSize" Value="18"/>
-            <Setter Property="FontFamily" Value="OpenSansRegular"/>
-        </Style>
-    </ContentPage.Resources>
+    </ContentPage.Resources>-->
     <ContentPage.BindingContext>
         <m:CustomerViewModel/>
     </ContentPage.BindingContext>
-    <ScrollView Grid.Row="1" Margin="0,24,0,24">
-        <Grid RowDefinitions="150,*" RowSpacing="24"
-                  ColumnDefinitions="*,*,*" ColumnSpacing="24">
-            <Grid.Resources>
-                <Style TargetType="Label" Class="Percent">
-                    <Setter Property="TextColor" Value="#50D1AA"/>
-                    <Setter Property="FontSize" Value="12"/>
-                    <Setter Property="VerticalTextAlignment" Value="Center"/>
-                </Style>
-
-                <Style TargetType="Label" Class="Up">
-                    <Setter Property="TextColor" Value="#50D1AA"/>
-                </Style>
-
-                <Style TargetType="Label" Class="Down">
-                    <Setter Property="TextColor" Value="#FF7CA3"/>
-                </Style>
-
-                <Style TargetType="Label" Class="Data">
-                    <Setter Property="TextColor" Value="#ffffff"/>
-                    <Setter Property="FontSize" Value="28"/>
-                    <Setter Property="VerticalTextAlignment" Value="Center"/>
-                </Style>
-
-                <Style TargetType="Label" Class="Label">
-                    <Setter Property="TextColor" Value="#ABBBC2"/>
-                    <Setter Property="FontSize" Value="14"/>
-                    <Setter Property="VerticalTextAlignment" Value="Center"/>
-                </Style>
-
-                <Style TargetType="Image">
-                    <Setter Property="VerticalOptions" Value="Center"/>
-                </Style>
-
-            </Grid.Resources>
-            <!-- 3 widgets horizontal -->
-
+    <ScrollView>
+        <Grid RowDefinitions="0,150,50"
+                  ColumnDefinitions="*">
             <VerticalStackLayout VerticalOptions="Center">
                 <Label Text="Main Menu" Style="{StaticResource LargeTitle}"/>
             </VerticalStackLayout>
-
-
-            <Border
-                    Grid.Row="0" Grid.Column="0"
+            <VerticalStackLayout Grid.Row="1">
+                <Border
+                    Grid.Column="0"
                     Style="{StaticResource DarkBorderView}">
-                <Grid RowDefinitions="45,*,24" Margin="16" IsClippedToBounds="False">
-                    <HorizontalStackLayout Spacing="12">
-                        <Border WidthRequest="38" HeightRequest="38"
-                                    VerticalOptions="Center"
-                                    Style="{StaticResource LightBorderView}">
-                            <Image Source="customer.png" HorizontalOptions="Center"/>
-                        </Border>
-                        <Label Text="+2.40%" class="Percent,Up"/>
-                        <Image Source="arrow_up.png"/>
-                    </HorizontalStackLayout>
-                    <Label Text="1,234" Grid.Row="1" class="Data"/>
-                    <Label Text="Total Customers" Grid.Row="2" class="Label"/>
-                </Grid>
-            </Border>
-            <Border Grid.Column="1"
-                    HorizontalOptions="Center"
-                    Style="{StaticResource DarkBorderView}">
-                <Grid RowDefinitions="*,*">
-                    <HorizontalStackLayout>
-                        <Image Source="{FontImage Color=White, FontFamily=FontAwesome, Glyph={x:Static a:IconFont.Search},Size=14}"
-                           Margin="14,0"
-                           VerticalOptions="Center" />
-                        <Entry Background="Transparent"
-                           Placeholder="Search for name, email etc"
-                           PlaceholderColor="{StaticResource TextSecondary}"
-                           TextColor="White"
-                           VerticalOptions="Center"
-                           WidthRequest="250"
-                           FontSize="14"/>
-                    </HorizontalStackLayout>
-                    <HorizontalStackLayout Grid.Row="1">
-                        <Grid ColumnDefinitions="*,*,*" ColumnSpacing="5" Margin="5">
-                            <Button Text="Add customer" VerticalOptions="Center"
-                                Clicked="OnCounterClicked"/>
-                            <Button Grid.Column="1" Text="Credit customer" VerticalOptions="Center"
-                                Clicked="OnCounterClicked"/>
-                            <Button Grid.Column="2" Text="Paid customer" VerticalOptions="Center"
-                                Clicked="OnCounterClicked"/>
+                    <Grid RowDefinitions="45,*,24" Margin="16" IsClippedToBounds="False">
+                        <HorizontalStackLayout Spacing="12">
+                            <Border WidthRequest="38" HeightRequest="38"
+                                    VerticalOptions="Center">
+                                <Image Source="customer.png" HorizontalOptions="Center"/>
+                            </Border>
+                            <Label Text="+2.40%" class="Percent,Up"/>
+                            <Image Source="arrow_up.png"/>
+                        </HorizontalStackLayout>
+                        <Label Text="1,234" Grid.Row="1" class="Data"/>
+                        <Label Text="Total Customers" Grid.Row="2" class="Label"/>
+                    </Grid>
+                 </Border>
+                 <BoxView Style="{StaticResource HRule}"/>
+            </VerticalStackLayout>
+            <VerticalStackLayout Grid.Row="2">
+                <Grid Margin="24" RowDefinitions="*,*">
+                    <HorizontalStackLayout Grid.Row="0">
+                        <Grid ColumnDefinitions="*,7*">
+                            <Border Style="{StaticResource PurpleBorderView}">
+                                <HorizontalStackLayout>
+                                    <Image Source="{FontImage Color=Black, FontFamily=FontAwesome, Glyph={x:Static a:IconFont.Search},Size=14}"
+                                        Margin="14,0"
+                                        VerticalOptions="Center" />
+                                    <Entry Background="Transparent"
+                                        Placeholder="Search for name, email etc"
+                                        PlaceholderColor="{StaticResource TextSecondary}"
+                                        TextColor="Black"
+                                        VerticalOptions="Center"
+                                        WidthRequest="250"
+                                        FontSize="14"/>
+                                </HorizontalStackLayout>
+                            </Border>
+                            <Border Grid.Column="1" Style="{StaticResource PurpleBorderView}">
+                                <Grid ColumnDefinitions="*,*,*" ColumnSpacing="5" Margin="5" >
+                                    <Button Text="Add customer" 
+                                            Clicked="OnCounterClicked"/>
+                                    <Button Grid.Column="1" Text="Credit customer"
+                                            Clicked="OnCounterClicked"/>
+                                    <Button Grid.Column="2" Text="Paid customer"
+                                            Clicked="OnCounterClicked"/>
+                                </Grid>
+                            </Border>
                         </Grid>
                     </HorizontalStackLayout>
-                </Grid>
-            </Border>
-            <Border
-                    Grid.Row="0" Grid.Column="2"
-                    Style="{StaticResource DarkBorderView}">
-
-            </Border>
-
-            <!-- Orders list -->
-            <Border
-                    Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3"
-                    Style="{StaticResource DarkBorderView}">
-                <Grid Margin="24" RowDefinitions="80,*">
-                    <Label Text="Customers" Style="{StaticResource Title1}"/>
-                    <Border Stroke="{StaticResource SecondaryBrush}" 
-                                StrokeThickness="1" Background="Transparent"
-                                Grid.Row="0" HorizontalOptions="End" VerticalOptions="Start"
-                                SemanticProperties.Description="Button that opens a filter dialog"
-                                >
-                        <Border.StrokeShape>
-                            <RoundRectangle CornerRadius="8"/>
-                        </Border.StrokeShape>
-                        <HorizontalStackLayout Margin="14,12" Spacing="12">
-                            <Image Source="filter.png" VerticalOptions="Center" />
-                            <Label Text="Filter" VerticalOptions="Center"/>
-                        </HorizontalStackLayout>
-
-                        <Border.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding ViewAllCommand}"/>
-                        </Border.GestureRecognizers>
-                    </Border>
-
-
-                    <ScrollView Grid.Row="1">
-                        <VerticalStackLayout Spacing="16">
-                            <!-- heading --><!--
-                            <Grid ColumnDefinitions="200,200,200,200,200,100,100,100,20,*,*">
-                                <Label Text="Name" Style="{StaticResource Headline}"/>
-                                <Label Text="Phone" Grid.Column="1" Style="{StaticResource Headline}"/>
-                                <Label Text="Email" Grid.Column="2" Style="{StaticResource Headline}"/>
-                                <Label Text="Status" Grid.Column="3" Style="{StaticResource Headline}"/>
-                                <Label Text="Address" Grid.Column="4" Style="{StaticResource Headline}"/>
-                                <Label Text="Age" Grid.Column="5" Style="{StaticResource Headline}"/>
-                                <Label Text="Gender" Grid.Column="6" Style="{StaticResource Headline}"/>
-                                <Label Text="Discount" Grid.Column="7" Style="{StaticResource Headline}"/>
-                                <Label Text="QR" Grid.Column="8" Style="{StaticResource Headline}"/>
-                                <Label Text="" Grid.Column="9" Style="{StaticResource Headline}"/>
-                                <Label Text="" Grid.Column="10" Style="{StaticResource Headline}"/>
-                            </Grid>
-
-                            <BoxView Style="{StaticResource HRule}"/>
-
-                            <Grid ColumnDefinitions="200,200,200,200,200,100,100,100,20,50,20" >
-                                <Label Text="Jhulez Dayrit" />
-                                <Label Text="099999999999" Grid.Column="1" />
-                                <Label Text="jhulez@gmail.com" Grid.Column="2" />
-                                <Label Text="Active" Grid.Column="3" />
-                                <Label Text="Quezon City" Grid.Column="4" />
-                                <Label Text="20" Grid.Column="5" />
-                                <Label Text="Male" Grid.Column="6" />
-                                <Label Text="None" Grid.Column="7"  />
-
-                                <Image Source="qr.png" Aspect="Fill" WidthRequest="30" HeightRequest="30" Grid.Column="8"  />
-       
-                                <Image Grid.Column="9" Source="edit.png"/>
-                                <Image Grid.Column="10"  Source="consultation.png"/>
-                            </Grid>-->
-
-
-                            <syncfusion:SfDataGrid x:Name="dataGrid"
-            AutoGenerateColumnsMode="None" DefaultColumnWidth="200" CellTapped="dataGrid_CellTapped"
-        
-            ItemsSource="{Binding CustomersInfoCollection}">
-                                <syncfusion:SfDataGrid.Columns  >
-                                    <syncfusion:DataGridTextColumn HeaderText="Given name"
+                    <VerticalStackLayout Spacing="16" Grid.Row="1">
+                        <syncfusion:SfDataGrid x:Name="dataGrid"
+                                AutoGenerateColumnsMode="None" DefaultColumnWidth="200" CellTapped="dataGrid_CellTapped" HeaderGridLinesVisibility="Both"  SelectionMode="SingleDeselect"
+                                 ItemsSource="{Binding CustomersInfoCollection}">
+                            <syncfusion:SfDataGrid.Columns>
+                                <syncfusion:DataGridTextColumn HeaderText="Given name"
                                    MappingName="GivenName" />
-                                    <syncfusion:DataGridTextColumn HeaderText="Last name"
+                                <syncfusion:DataGridTextColumn HeaderText="Last name"
                                    MappingName="LastName"/>
-                                    <syncfusion:DataGridTextColumn HeaderText="Contact" MappingName="Contact"/>
-                                    <syncfusion:DataGridTextColumn HeaderText="Email"
+                                <syncfusion:DataGridTextColumn HeaderText="Contact" MappingName="Contact"/>
+                                <syncfusion:DataGridTextColumn HeaderText="Email"
                                    MappingName="Email"/>
-                                    <syncfusion:DataGridTextColumn HeaderText="Birth date"
+                                <syncfusion:DataGridTextColumn HeaderText="Birth date"
                                    MappingName="BirthDate"/>
-                                    <syncfusion:DataGridTextColumn HeaderText="Age"
+                                <syncfusion:DataGridTextColumn HeaderText="Age"
                                    MappingName="Age"/>
-                                    <syncfusion:DataGridTextColumn HeaderText="Gender"
+                                <syncfusion:DataGridTextColumn HeaderText="Gender"
                                    MappingName="Gender"/>
-                                    <syncfusion:DataGridTextColumn HeaderText="Discount"
+                                <syncfusion:DataGridTextColumn HeaderText="Discount"
                                    MappingName="Discount"/>
-                                </syncfusion:SfDataGrid.Columns>
-                            </syncfusion:SfDataGrid>
-
-                        </VerticalStackLayout>
-
-                    </ScrollView>
+                                <syncfusion:DataGridTemplateColumn HeaderText="Action">
+                                    <syncfusion:DataGridTemplateColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <Label>Hello</Label>
+                                        </DataTemplate>
+                                    </syncfusion:DataGridTemplateColumn.CellTemplate>
+                                </syncfusion:DataGridTemplateColumn>
+                            </syncfusion:SfDataGrid.Columns>
+                        </syncfusion:SfDataGrid>
+                    </VerticalStackLayout>
                 </Grid>
-            </Border>
-
+            </VerticalStackLayout>
         </Grid>
-
     </ScrollView>
-
 </ContentPage>
