--- a/PointOfSale/Resources/Styles/Styles.xaml
+++ b/PointOfSale/Resources/Styles/Styles.xaml
@@ -6,14 +6,20 @@
 
 
     <Style TargetType="syncfusion:DataGridCell">
-        <Setter Property="TextColor" Value="#fff"/>
-        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="TextColor" Value="Black"/>
+        <Setter Property="FontSize" Value="14"/>
         <Setter Property="FontFamily" Value="OpenSansRegular"/>
     </Style>
     <Style TargetType="syncfusion:DataGridHeaderCell">
-        <Setter Property="TextColor" Value="#fff"/>
-        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="TextColor" Value="Black"/>
+        <Setter Property="FontSize" Value="16"/>
         <Setter Property="FontFamily" Value="OpenSansRegular"/>
+        <Setter Property="Background" Value="#0074E3"/>
+    </Style>
+
+    <Style TargetType="syncfusion:SfDataGrid">
+        <Setter Property="RowHeight" Value="40"/>
+        <Setter Property="ColumnWidthMode" Value="Fill"/>
     </Style>
 
     <!-- Shell -->
@@ -44,7 +50,7 @@
             Value="18" />
         <Setter
             Property="TextColor"
-            Value="White" />
+            Value="Black" />
         <Setter
             Property="FontFamily"
             Value="OpenSansRegular"/>
@@ -96,10 +102,8 @@
 
     <Style TargetType="Page" ApplyToDerivedTypes="True">
         <Setter Property="Padding" Value="0"/>
-        <Setter Property="Background"
-            Value="{AppThemeBinding
-                Dark={StaticResource DarkBg1Brush},
-                Light={StaticResource WhiteBrush}}"/>
+        <Setter Property="BackgroundColor"
+            Value="White"/>
         <Setter Property="Shell.NavBarIsVisible" Value="True"/>
     </Style>
 
@@ -343,9 +347,15 @@
         <Setter Property="StrokeThickness" Value="1"/>
     </Style>
 
-    
-    
-    
+    <Style x:Key="PurpleBorderView" TargetType="Border">
+        <Setter Property="Stroke" Value="Purple"/>
+        <Setter Property="StrokeShape" Value="RoundRectangle"/>
+        <Setter Property="StrokeThickness" Value="1"/>
+    </Style>
 
-    
+
+
+
+
+
 </ResourceDictionary>    
