--- a/PointOfSale/Pages/DashboardPage.xaml
+++ b/PointOfSale/Pages/DashboardPage.xaml
@@ -75,7 +75,7 @@
                             <Label Text="+32.40%" class="Percent,Down"/>
                             <Image Source="arrow_up.png"/>
                         </HorizontalStackLayout>
-                        <Label Text="$10,482" Grid.Row="1" class="Data"/>
+                        <Label Text="PHP10,482" Grid.Row="1" class="Data"/>
                         <Label Text="Total Revenue" Grid.Row="2" class="Label"/>
                     </Grid>
                 </Border>
@@ -231,9 +231,9 @@
                                 <Label Style="{StaticResource Headline}" Grid.Column="1">
                                     <Label.FormattedText>
                                         <FormattedString>
-                                            <Span>Spicy Noodle Soup</Span>
+                                                <Span>Paracetamol</Span>
                                             <Span Text="{x:Static system:Environment.NewLine}"/>
-                                            <Span TextColor="{StaticResource TextSecondary}" FontSize="12">$2.29</Span>
+                                            <Span TextColor="{StaticResource TextSecondary}" FontSize="12">PHP5.95</Span>
                                         </FormattedString>
 
                                     </Label.FormattedText>
